--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ form {
 .Button {
   color: white;
   border-radius: 10px;
+  border: black solid 2px;
   outline: 2px;
   margin-left: 10px;
   margin-top: 10px;
