--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html {
   text-align: center;
   animation: backgroundColourAnimated 8s infinite alternate;
   min-height: 100vh;
+  padding-bottom: 60px;
 }
 
 @keyframes backgroundColourAnimated {
@@ -65,6 +66,10 @@ form {
   margin-left: 10px;
   margin-top: 10px;
   transition: all 0.1s ease-in-out;
+}
+
+.Button:hover {
+  cursor: pointer;
 }
 
 #submitButton {
